setting custom primary color and going back to light theme as default

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,34 +1,42 @@
-<h3 class="text-light">About PureOKRs.com</h3>
+<h5>About PureOKRs.com</h5>
 
-<section class="card my-4 border-0 bg-dark text-light">
-    <h5 class="card-title pt-2 pl-2">What are Objectives and Key Results (OKRs)?</h5>
-    <div class="card-body">
-        <p>It is a goal setting methodology for operationalizing a company's strategy. Objectives are main
-            goals, while key results are what you need to accomplish to reach the main goals. OKRs are
-            organized in a tree structure starting with high level OKRs which are broken down into smaller and
-            smaller OKRs as the tree is traversed. The methodology is used by all kinds of companies - from
-            small tech startups to industrial giants.
-        </p>
-    </div>
+<section class="card my-4 border-0">
+  <h5 class="card-title pt-2 pl-2">
+    What are Objectives and Key Results (OKRs)?
+  </h5>
+  <div class="card-body">
+    <p>
+      It is a goal setting methodology for operationalizing a company's
+      strategy. Objectives are main goals, while key results are what you need
+      to accomplish to reach the main goals. OKRs are organized in a tree
+      structure starting with high level OKRs which are broken down into smaller
+      and smaller OKRs as the tree is traversed. The methodology is used by all
+      kinds of companies - from small tech startups to industrial giants.
+    </p>
+  </div>
 </section>
 
-<section class="card my-4 border-0 bg-dark text-light">
-    <h5 class="card-title pt-2 pl-2">Why PureOKRs?</h5>
-    <div class="card-body">
-        <p>
-            There are lots of OKR tools out there. However, most of them are unnecessary complex and make
-            it difficult to maintain the elegant simplicity of the OKR methodology. The purpose of PureOKRs
-            is to provide a tool that helps you keep track of your Objectives and Key Results. No more, no less. 
-        </p>
-    </div>
+<section class="card my-4 border-0">
+  <h5 class="card-title pt-2 pl-2">Why PureOKRs?</h5>
+  <div class="card-body">
+    <p>
+      There are lots of OKR tools out there. However, most of them are
+      unnecessary complex and make it difficult to maintain the elegant
+      simplicity of the OKR methodology. The purpose of PureOKRs is to provide a
+      tool that helps you keep track of your Objectives and Key Results. No
+      more, no less.
+    </p>
+  </div>
 </section>
 
-<section class="card my-4 border-0 bg-dark text-light">
-    <h5 class="card-title pt-2 pl-2">PureOKRs Business Model</h5>
-    <div class="card-body">
-        <p>PureOKRs is free for the first 25 users per company. The source code can also be downloaded from
-            <a href="https://github.com/nilseng/pureokrs" target="_blank">GitHub</a> if you'd like to make
-            changes and/or handle hosting by yourself.
-        </p>
-    </div>
+<section class="card my-4 border-0">
+  <h5 class="card-title pt-2 pl-2">PureOKRs Business Model</h5>
+  <div class="card-body">
+    <p>
+      PureOKRs is free for the first 25 users per company. The source code can
+      also be downloaded from
+      <a href="https://github.com/nilseng/pureokrs" target="_blank">GitHub</a>
+      if you'd like to make changes and/or handle hosting by yourself.
+    </p>
+  </div>
 </section>
