--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,6 +1,6 @@
 <div class="row m-0">
   <div class="col-sm pt-4">
-    <div class="text-light rounded p-1 p-sm-4">
+    <div class="rounded p-1 p-sm-4">
       <form
         [formGroup]="loginForm"
         (ngSubmit)="login(loginForm.value)"
@@ -58,7 +58,7 @@
     </div>
   </div>
   <div class="col-sm pt-4">
-    <section class="text-light rounded p-4">
+    <section class="rounded p-4">
       <h5>Why Objectives and Key Results?</h5>
       <ul>
         <li>
