--- a/src/app/okr-tree/node/node.component.html
+++ b/src/app/okr-tree/node/node.component.html
@@ -13,7 +13,7 @@
       [attr.height]="okrTreeNode.data.height"
       [attr.rx]="2"
       [attr.ry]="2"
-      style="fill: rgb(249, 249, 249); stroke-width: 1; stroke: #428bca;"
+      style="fill: rgb(249, 249, 249); stroke-width: 1; stroke: #1c2e3f;"
     ></svg:rect>
     <svg:text
       #text
@@ -37,7 +37,7 @@
       [attr.cx]="cx"
       [attr.cy]="cy"
       [attr.r]="10"
-      style="fill: #428bca;"
+      style="fill: #17a2b8;"
     ></svg:circle>
     <svg:text
       *ngIf="
