--- a/src/app/okr-tree/okr-tree.component.html
+++ b/src/app/okr-tree/okr-tree.component.html
@@ -16,7 +16,7 @@
       [attr.width]="_width"
       rx="2"
       ry="2"
-      fill="#f9f9f9"
+      fill="white"
     ></rect>
     <g id="container" [zoomableOf]="svg" #container>
       <g [edge]="edge" *ngFor="let edge of root.links()"></g>
