--- a/src/app/okr/edit-okr/edit-okr.component.html
+++ b/src/app/okr/edit-okr/edit-okr.component.html
@@ -72,7 +72,7 @@
         <div class="form-group mt-2">
           <label class="mt-1" for="ownerSearchBox"
             >Assigned to
-            <span *ngIf="owner" class="badge badge-primary">{{
+            <span *ngIf="owner" class="badge badge-info">{{
               owner.name
             }}</span></label
           >
@@ -102,7 +102,7 @@
         <div class="form-group">
           <label *ngIf="parent" for="parentSearchBox"
             >Linked to
-            <span *ngIf="parent" class="badge badge-primary">{{
+            <span *ngIf="parent" class="badge badge-info">{{
               parent.objective
             }}</span></label
           >
