--- a/src/app/privacy/privacy.component.html
+++ b/src/app/privacy/privacy.component.html
@@ -1,6 +1,6 @@
-<h3 class="text-light">Privacy at PureOKRs.com</h3>
+<h5>Privacy at PureOKRs.com</h5>
 
-<section class="card my-4 border-0 bg-dark text-light">
+<section class="card my-4 p-1 border-0">
   <h5 class="card-title">
     <fa-icon [icon]="faCookie"></fa-icon>
     Cookies
@@ -8,32 +8,36 @@
   <div class="card-body">
     <ul>
       <li>
-        PureOKRs is using Google Analytics to measure traffic on the website. Google Analytics is making this
-        possible by the use of cookies.
+        PureOKRs is using Google Analytics to measure traffic on the website.
+        Google Analytics is making this possible by the use of cookies.
       </li>
       <li>
-        In order to provide a secure and user friendly solution, PureOKRs is storing a token for authentication
-        purposes in your browser. The token is deleted if the user logs out or when it expires after a set
-        interval.
+        In order to provide a secure and user friendly solution, PureOKRs is
+        storing a token for authentication purposes in your browser. The token
+        is deleted if the user logs out or when it expires after a set interval.
       </li>
     </ul>
   </div>
 </section>
 
-<section class="card my-4 border-0 bg-dark text-light">
+<section class="card my-4 p-1 border-0">
   <h5 class="card-title">
     <fa-icon [icon]="faUserShield"></fa-icon>
     Processing of personal data
   </h5>
   <div class="card-body">
-    PureOKRs is storing names to make it possible to show you who the other users from your company
-    are, and to make it possible to assign OKRs to individuals. In addition, email addresses are stored
-    in order to send invitation emails to new users and to send emails in case someone needs to reset 
-    their password. Both names and emails are deleted permanently when users are deleted from PureOKRs.
-    <br>
-    <br>
-    The data is stored in document databases provided by <a href="https://www.mlab.com/home" target="_blank">mLab</a>.
-    The servers on which the databases are run, are provided by <a href="https://aws.amazon.com/" target="_blank">AWS</a>
+    PureOKRs is storing names to make it possible to show you who the other
+    users from your company are, and to make it possible to assign OKRs to
+    individuals. In addition, email addresses are stored in order to send
+    invitation emails to new users and to send emails in case someone needs to
+    reset their password. Both names and emails are deleted permanently when
+    users are deleted from PureOKRs.
+    <br />
+    <br />
+    The data is stored in document databases provided by
+    <a href="https://www.mlab.com/home" target="_blank">mLab</a>. The servers on
+    which the databases are run, are provided by
+    <a href="https://aws.amazon.com/" target="_blank">AWS</a>
     and are located in Europe.
   </div>
 </section>
