--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,6 +1,6 @@
 <div class="row m-0">
   <div class="col-sm">
-    <div class="text-light rounded p-1 p-sm-4">
+    <div class="rounded p-1 p-sm-4">
       <form [formGroup]="registerForm" (ngSubmit)="register()" novalidate>
         <div class="form-group">
           <label for="company">Company</label>
@@ -101,7 +101,7 @@
     </div>
   </div>
   <div class="col-sm pt-4">
-    <section class="text-light rounded p-4">
+    <section class="rounded p-4">
       <h5>Welcome!</h5>
       <p>
         Register your company and get started with creating your first
