--- a/src/app/users/users.component.css
+++ b/src/app/users/users.component.css
@@ -1,6 +1,10 @@
 @media only screen and (max-width: 820px) {
-    /* For mobile phones: */
-    [class*="table-button"] {
-      margin: 1px;
-    }
+  /* For mobile phones: */
+  [class*="table-button"] {
+    margin: 1px;
   }
+}
+
+.user-table {
+  max-width: 768px;
+}
