removing octions directive and replacing kebab icon with ellipsisH from font awesome

--- a/src/app/okr-list/okr-node/okr-node.component.html
+++ b/src/app/okr-list/okr-node/okr-node.component.html
@@ -8,7 +8,7 @@
         aria-haspopup="true"
         aria-expanded="false"
       >
-        <span octicon="kebab-horizontal" width="15px"></span>
+        <fa-icon [icon]="faEllipsisH"></fa-icon>
       </a>
       <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
         <a
