--- a/src/app/okr-tree/okr-tree.component.html
+++ b/src/app/okr-tree/okr-tree.component.html
@@ -1,7 +1,8 @@
+<h5>{{ user?.company }}'s objectives and key results.</h5>
 <div class="mb-4">
   <app-new-okr (savedOkr)="savedOkr($event)"></app-new-okr>
   <app-edit-okr
-    *ngIf="okrNodeToEdit"
+    *ngIf="okrNodeToEdit && okrNodeToEdit.depth"
     [okrHierarchyNode]="okrNodeToEdit"
     (savedOkr)="savedOkr($event)"
   ></app-edit-okr>
@@ -19,14 +20,18 @@
       fill="white"
     ></rect>
     <g id="container" [zoomableOf]="svg" #container>
-      <g [edge]="edge" *ngFor="let edge of root.links()"></g>
-      <g
-        *ngFor="let node of root.descendants()"
-        [okrTreeNode]="node"
-        (nodeShow)="pushChildren($event)"
-        (nodeHide)="hideChildren($event)"
-        (okrNodeToEdit)="editOkrNode($event)"
-      ></g>
+      <g *ngFor="let edge of root.links()">
+        <g *ngIf="edge.source.depth" [edge]="edge"></g>
+      </g>
+      <g *ngFor="let node of root.descendants()">
+        <g
+          *ngIf="node.depth"
+          [okrTreeNode]="node"
+          (nodeShow)="pushChildren($event)"
+          (nodeHide)="hideChildren($event)"
+          (okrNodeToEdit)="editOkrNode($event)"
+        ></g>
+      </g>
     </g>
   </svg>
 </div>
