--- a/src/app/okr-tree/okr-tree.component.html
+++ b/src/app/okr-tree/okr-tree.component.html
@@ -2,7 +2,7 @@
 <div class="mb-4">
   <app-new-okr (savedOkr)="savedOkr($event)"></app-new-okr>
   <app-edit-okr
-    *ngIf="okrNodeToEdit && okrNodeToEdit.depth"
+    *ngIf="okrNodeToEdit"
     [okrHierarchyNode]="okrNodeToEdit"
     (savedOkr)="savedOkr($event)"
   ></app-edit-okr>
