--- a/src/app/okr-list/okr-list.component.html
+++ b/src/app/okr-list/okr-list.component.html
@@ -11,30 +11,34 @@
   [okrHierarchyNode]="okrNodeToEdit"
   (savedOkr)="savedOkr($event)"
 ></app-edit-okr>
-<div *ngIf="root" class="pb-4">
-  <app-okr-node
-    *ngFor="let node of root.children"
-    [okrHierarchyNode]="node"
-    (deletedNode)="hideDeletedNode($event)"
-    (okrNodeToEdit)="editOkrNode($event)"
-    (parentId)="addChild($event)"
-  >
-  </app-okr-node>
-</div>
-<div *ngIf="root && !root.children">
-  <div class="card mb-4">
-    <div class="card-body">
-      <h5 class="card-title">
-        It seems like you have no OKRs yet, but no worries! Just select the New
-        OKR button to create your first.
-      </h5>
-      <p class="card-text">
-        If you don't know what an OKR is, check out
-        <a routerLink="/about">this short description</a>, try a quick google
-        search or feel free to send us an
-        <a href="mailto:contact@pureokrs.com">email</a>.
-      </p>
+<div *ngIf="okrTree$ | async as root">
+  <div class="pb-4">
+    <app-okr-node
+      *ngFor="let node of root.children"
+      [okrHierarchyNode]="node"
+      (deletedNode)="hideDeletedNode($event)"
+      (okrNodeToEdit)="editOkrNode($event)"
+      (parentId)="addChild($event)"
+    >
+    </app-okr-node>
+  </div>
+  <div *ngIf="!root.children">
+    <div class="card mb-4">
+      <div class="card-body">
+        <h5 class="card-title">
+          It seems like you have no OKRs yet, but no worries! Just select the
+          New OKR button to create your first.
+        </h5>
+        <p class="card-text">
+          If you don't know what an OKR is, check out
+          <a routerLink="/about">this short description</a>, try a quick google
+          search or feel free to send us an
+          <a href="mailto:contact@pureokrs.com">email</a>.
+        </p>
+      </div>
     </div>
   </div>
 </div>
-<app-loading *ngIf="!root"></app-loading>
+<div *ngIf="okrTreeIsLoading$ | async as isLoading">
+  <app-loading *ngIf="isLoading"></app-loading>
+</div>
