--- a/src/app/okr-tree/okr-tree.component.html
+++ b/src/app/okr-tree/okr-tree.component.html
@@ -1,7 +1,7 @@
 <h5 *ngIf="user$ | async as user">
   {{ user.company }}'s objectives and key results.
 </h5>
-<div class="mb-4">
+<div *ngIf="vm$ | async as vm" class="mb-4">
   <app-new-okr (savedOkr)="savedOkr($event)"></app-new-okr>
   <app-edit-okr
     *ngIf="okrNodeToEdit"
@@ -10,22 +10,23 @@
   ></app-edit-okr>
   <svg
     #svg
-    [attr.height]="_height"
-    [attr.width]="_width"
+    [attr.height]="vm.config.height"
+    [attr.width]="vm.config.width"
     style="margin: auto; display: block;"
+    overflow="hidden"
   >
     <rect
-      [attr.height]="_height"
-      [attr.width]="_width"
+      [attr.height]="vm.config.height"
+      [attr.width]="vm.config.width"
       rx="2"
       ry="2"
       fill="white"
     ></rect>
     <g id="container" [zoomableOf]="svg" #container>
-      <g *ngFor="let edge of root.links()">
+      <g *ngFor="let edge of vm.tree.links()">
         <g *ngIf="edge.source.depth" [edge]="edge"></g>
       </g>
-      <g *ngFor="let node of root.descendants()">
+      <g *ngFor="let node of vm.tree.descendants()">
         <g
           *ngIf="node.depth"
           [okrTreeNode]="node"
@@ -37,4 +38,6 @@
     </g>
   </svg>
 </div>
-<app-loading *ngIf="!root"></app-loading>
+<div *ngIf="okrTreeIsLoading$ | async as isLoading">
+  <app-loading *ngIf="isLoading"></app-loading>
+</div>
