adding alt text to logo image

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <nav id="navbar" class="navbar navbar-expand-lg navbar-dark bg-primary">
   <a class="navbar-brand" [routerLink]="['']"
-    ><img src="assets/logo.svg" /> Pure OKRs</a
+    ><img src="assets/logo.svg" alt="logo" /> Pure OKRs</a
   >
   <button
     class="navbar-toggler"
