changing link text on register page

--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -95,7 +95,7 @@
           class="btn btn-link btn-sm"
           [routerLink]="['/login']"
         >
-          Already have a user? Log in here.
+          Already have a user? Log in.
         </button>
       </form>
     </div>
