changing privacy link text

--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -74,8 +74,8 @@
               required
             />
             <small class="ml-1">
-              I accept that PureOKRs will process data as described
-              <a routerLink="/privacy" target="_blank">here</a>.
+              I accept that PureOKRs will process data as described in the
+              <a routerLink="/privacy" target="_blank">privacy policy</a>.
             </small>
           </label>
         </div>
@@ -95,7 +95,7 @@
           class="btn btn-link btn-sm"
           [routerLink]="['/login']"
         >
-          Already have a user? Log in.
+          Already have a user? Log in here.
         </button>
       </form>
     </div>
