updating privacy notice after migrating to atlas mongodb

--- a/src/app/privacy/privacy.component.html
+++ b/src/app/privacy/privacy.component.html
@@ -35,8 +35,9 @@
     <br />
     <br />
     The data is stored in document databases provided by
-    <a href="https://www.mlab.com/home" target="_blank">mLab</a>. The servers on
-    which the databases are run, are provided by
+    <a href="https://www.mongodb.com/cloud/atlas" target="_blank"
+      >MongoDB Atlas</a
+    >. The servers on which the databases are run, are provided by
     <a href="https://aws.amazon.com/" target="_blank">AWS</a>
     and are located in Europe.
   </div>
