--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -17,6 +17,12 @@
               Privacy
             </a>
           </li>
+          <li class="list-group-item active">
+            <a href="https://www.purewacc.com" class="text-light">
+              <img src="assets/logo_small.svg" alt="logo">
+              <span>Pure WACC</span>
+            </a>
+          </li>
         </ul>
       </div>
       <hr class="clearfix w-100 d-md-none pb-3">
