small navbar change

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -14,7 +14,7 @@
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
+    <ul class="navbar-nav w-100 justify-content-end">
       <li *ngIf="!auth.isLoggedIn()" class="nav-item">
         <a routerLink="/login" class="nav-link">Log in</a>
       </li>
