adding stats page

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -34,6 +34,12 @@
         </a>
       </li>
       <li *ngIf="auth.isLoggedIn()" class="nav-item">
+        <a routerLink="/statistics" class="nav-link">
+          <fa-icon [icon]="faChartPie"></fa-icon>
+          Stats
+        </a>
+      </li>
+      <li *ngIf="auth.isLoggedIn()" class="nav-item">
         <a routerLink="/users" class="nav-link">
           <fa-icon [icon]="faUsers"></fa-icon>
           Users
