adding stats and insights to feature list

--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -12,4 +12,7 @@
     <fa-icon class="mr-2" [icon]="faUsers"></fa-icon>Invite colleagues or team
     mates to collaborate
   </div>
+  <div class="my-2">
+    <fa-icon class="mr-2" [icon]="faChartPie"></fa-icon>Statistics and insights
+  </div>
 </div>
