--- a/src/app/okr-tree/okr-tree.component.html
+++ b/src/app/okr-tree/okr-tree.component.html
@@ -12,7 +12,7 @@
     #svg
     [attr.height]="vm.config.height"
     [attr.width]="vm.config.width"
-    style="margin: auto; display: block;"
+    style="margin: auto; display: block"
     overflow="hidden"
   >
     <rect
@@ -23,10 +23,10 @@
       fill="white"
     ></rect>
     <g id="container" [zoomableOf]="svg" #container>
-      <g *ngFor="let edge of vm.tree.links()">
+      <g *ngFor="let edge of vm.tree?.links()">
         <g *ngIf="edge.source.depth" [edge]="edge"></g>
       </g>
-      <g *ngFor="let node of vm.tree.descendants()">
+      <g *ngFor="let node of vm.tree?.descendants()">
         <g
           *ngIf="node.depth"
           [okrTreeNode]="node"
