--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -17,15 +17,9 @@
               Privacy
             </a>
           </li>
-          <li class="list-group-item active">
-            <a href="https://www.purewacc.com" class="text-light">
-              <img src="assets/logo_small.svg" alt="logo">
-              <span>Pure WACC</span>
-            </a>
-          </li>
         </ul>
       </div>
-      <hr class="clearfix w-100 d-md-none pb-3">
+      <hr class="clearfix w-100 d-md-none pb-3" />
       <div class="col-md-6 mb-md-0 mb-3">
         <h5 class="text-uppercase">Get in touch</h5>
         <ul class="list-group">
@@ -39,5 +33,7 @@
       </div>
     </div>
   </div>
-  <div class="footer-copyright text-center py-3">© 2020 Copyright: PureOKRs AS</div>
+  <div class="footer-copyright text-center py-3">
+    © 2021 Copyright: PureOKRs AS
+  </div>
 </footer>
