--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,18 +1,18 @@
 <!--Footer-->
-<footer class="page-footer font-small bg-primary text-white pt-4">
+<footer class="page-footer font-small text-muted pt-4">
   <div class="container-fluid text-center text-md-left">
     <div class="row">
       <div class="col-md-6 mt-md-0 mt-3">
         <h5 class="text-uppercase">Resources</h5>
         <ul class="list-group">
-          <li class="list-group-item active">
-            <a class="text-light" [routerLink]="['about']">
+          <li class="list-group-item border-0">
+            <a class="text-muted" [routerLink]="['about']">
               <fa-icon [icon]="faQuestionCircle"></fa-icon>
               About
             </a>
           </li>
-          <li class="list-group-item active">
-            <a class="text-light" [routerLink]="['privacy']">
+          <li class="list-group-item border-0">
+            <a class="text-muted" [routerLink]="['privacy']">
               <fa-icon [icon]="faShieldAlt"></fa-icon>
               Privacy
             </a>
@@ -23,8 +23,8 @@
       <div class="col-md-6 mb-md-0 mb-3">
         <h5 class="text-uppercase">Get in touch</h5>
         <ul class="list-group">
-          <li class="list-group-item active">
-            <a class="text-light" href="mailto:contact@pureokrs.com">
+          <li class="list-group-item border-0">
+            <a class="text-muted" href="mailto:contact@pureokrs.com">
               <fa-icon [icon]="faEnvelope"></fa-icon>
               contact@pureokrs.com
             </a>
