--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -1,3 +1,12 @@
 .navbar-brand {
   padding: 0;
 }
+
+.logo {
+  height: 3rem;
+  width: 3rem;
+}
+
+.navbar-shadow {
+  box-shadow: 0px 3px 8px 0px rgba(209, 205, 199, 0.5);
+}
